--- a/CV/Sposito_CV.Rmd
+++ b/CV/Sposito_CV.Rmd
@@ -37,15 +37,15 @@ tribble(~ Degree, ~ Year, ~ Institution, ~ Where, ~ Why,
   "Sep 2019 -  2024",
   "The Graduate Institute of International and Development Studies (IHEID)", 
   "Geneva, Switzerland",
-  "\\textit{Doctoral Project:} 'Authenticity, problem construction, and urgency in political discourses' \\\\ Supervised by Dr. James Hollway and Dr. Yanina Welp
-  \\item \\textit{Core Courses:} Doctoral Seminar; Survey Experiments; Social Networks; Statistics; Identity and Violence",
+  "Doctoral Project: 'Authenticity, problem construction, and urgency in political discourses' \\\\ Supervised by Dr. James Hollway and Dr. Yanina Welp
+  \\item Core Courses: Doctoral Seminar; Survey Experiments; Social Networks; Statistics; Identity and Violence",
   "Masters in International Relations and Political Science",
   "Sep 2017 - Aug 2019",
   "The Graduate Institute of International and Development Studies (IHEID)",
   "Geneva, Switzerland",
-  "\\textit{Masters' Thesis:} 'The Construction of a Migrant Crisis - The Venezuelan Migration to Brazil' \\\\ Supervised by Dr. Melanie Kolbe and Dr. Graziella Moraes Silva",
+  "Masters' Thesis: 'The Construction of a Migrant Crisis - The Venezuelan Migration to Brazil' \\\\ Supervised by Dr. Melanie Kolbe and Dr. Graziella Moraes Silva",
   "Bachelor of Arts in Political Science and Sociology (Double Degree) with a minor in Economics", "Jan 2013 - Jun 2017", "University of Alabama at Birmingham", "Birmingham, United States",
-  "\\textit{Awards:} Recipient of 4 years of scholarship as a Student-Athlete for Soccer in a NCAA Division 1 University") %>% 
+  "Recipient of 4 years of scholarship as a Student-Athlete for Soccer in a NCAA Division 1 University") %>% 
   detailed_entries(Institution, Year, Degree, Where, Why, .protect = FALSE)
 ```
 
@@ -97,7 +97,7 @@ tribble(~ Title, ~ Published, ~ Journal,
 tribble(~ Course, ~ Where, ~ Date, ~ Why, 
   "Fundamentals of R (co-lecturered with Livio Silva-Muller)",
   "The Graduate Institute of International and Development Studies (IHEID)",
-  "Fall 2022, Spring 2023, Fall 2023 (upcoming)",
+  "Fall 2022, Spring 2023, Fall 2023",
   "Provides a hands on introduction to data science using the R programming language and software
   \\item Teaches students how to import, transform, analyze, and visualize various types of data in R
   \\item Demonstrates practical applications of R for the analysis of environment, finance, and conflict data",
@@ -199,21 +199,25 @@ tribble(~ Name, ~ Purpose, ~ Status,
 
 # Skills
 
-```{=latex}
-\begin{table}[tbh]
-\centering
-\begin{tabular}{cccll}
-\textbf{Languages} & \textbf{Programming languages} & \textbf{Markup languages} & \textit{} & \textit{} \\
-\multicolumn{1}{l}{}   & \multicolumn{1}{l}{}  & \multicolumn{1}{l}{}  &  &  \\
-Portuguese (Native)    & R (Proficient)        & Markdown (Proficient) &  &  \\
-English (Fluent)       & Python (Intermediate) & LaTeX (Advanced)      &  &  \\
-French (Proficient)    & C (Basic)             & HTML (Advanced)       &  &  \\
-Italian (Intermediate) & Bash (Basic)          & CSS (Intermediate)    &  &  \\
-Spanish (Basic)        & Java (Basic)          & XML (Basic)           &  &  \\
-                       &                       &                       &  & 
-\end{tabular}
-\end{table}
-```
+<!-- ```{=latex} -->
+<!-- \begin{table}[tbh] -->
+<!-- \centering -->
+<!-- \begin{tabular}{cccll} -->
+<!-- \textbf{Languages} & \textbf{Programming languages} & \textbf{Markup languages} & \textit{} & \textit{} \\ -->
+<!-- \multicolumn{1}{l}{}   & \multicolumn{1}{l}{}  & \multicolumn{1}{l}{}  &  &  \\ -->
+<!-- Portuguese (Native)    & R (Proficient)        & Markdown (Proficient) &  &  \\ -->
+<!-- English (Fluent)       & Python (Intermediate) & LaTeX (Advanced)      &  &  \\ -->
+<!-- French (Proficient)    & C (Basic)             & HTML (Advanced)       &  &  \\ -->
+<!-- Italian (Intermediate) & Bash (Basic)          & CSS (Intermediate)    &  &  \\ -->
+<!-- Spanish (Basic)        & Java (Basic)          & XML (Basic)           &  &  \\ -->
+<!--                        &                       &                       &  &  -->
+<!-- \end{tabular} -->
+<!-- \end{table} -->
+<!-- ``` -->
+
+- **Languages:** Portuguese (native); English (fluent); French (proficient); Italian (intermediate); Spanish (basic) 
+- **Programming languages:** R (proficient); Python (intermediate); C (basic); Bash (basic); Java (basic)
+- **Markup languages:** Markdown (proficient); LaTeX (advanced); HTML (advanced); CSS (intermediate)
 
 # References
 
