--- a/courses.Rmd
+++ b/courses.Rmd
@@ -22,7 +22,7 @@ $$\\[0.1cm]$$
 
 **Fundamentals of R (co-lecturered with Livio Silva-Muller)** 
 
-*Fall 2022; Spring 2023; Fall 2023 (upcoming) at The Graduate Institute of International and Development Studies (IHEID)*
+*Fall 2022; Spring 2023; and Fall 2023 at The Graduate Institute of International and Development Studies (IHEID)*
 
 This course offers masters' students a hands on introduction to data science using the R programming language and software. We teach students how to import, transform, analyze, and visualize various types of data in R. To help students think through data, we show practical applications of R for the analysis of environment, finance, and conflict data.
 
