--- a/docs/CV/Sposito_CV.Rmd
+++ b/docs/CV/Sposito_CV.Rmd
@@ -97,7 +97,7 @@ tribble(~ Title, ~ Published, ~ Journal,
 tribble(~ Course, ~ Where, ~ Date, ~ Why, 
   "Fundamentals of R (co-lecturered with Livio Silva-Muller)",
   "The Graduate Institute of International and Development Studies (IHEID)",
-  "Fall 2022, Spring 2023, Fall 2023 (upcoming)",
+  "Fall 2022, Spring 2023, Fall 2023",
   "Provides a hands on introduction to data science using the R programming language and software
   \\item Teaches students how to import, transform, analyze, and visualize various types of data in R
   \\item Demonstrates practical applications of R for the analysis of environment, finance, and conflict data",
