--- a/docs/CV/Sposito_CV.Rmd
+++ b/docs/CV/Sposito_CV.Rmd
@@ -82,7 +82,7 @@ tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
 tribble(~ Title, ~ Published, ~ Journal, ~ When,
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)}",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics", "June 2023",
-  "Radiating Truthiness: Authenticity performances in politics in Brazil and the United States", "Under Review in Political Studies", "", "",
+  "Radiating Truthiness: Authenticity performances in politics in Brazil and the United States", "Revise and Resubmit in Political Studies", "", "",
   "Managing imprecise dates in R with messydates (with James Hollway)",
   "Working Paper", "", "",
   "It is urgent that we look at urgency in politics: An introduction to urgency analysis",
@@ -105,7 +105,7 @@ tribble(~ Course, ~ Where, ~ Date, ~ Why,
   "The Graduate Institute of International and Development Studies (IHEID)",
   "Fall 2023 (upcoming)",
   "Provides an applied introduction to various research methods using R
-  \\item Teaches students how to select and carry-on different types of statistical modeling; how to work with unsupervised approaches for text analysis; and how to code, visualize, and model network data") %>% 
+  \\item Teaches students how to select and carry-on different types of statistical modeling; how to work with unsupervised approaches for text analysis; and how to analyze, visualize, and model survey data") %>% 
   detailed_entries(what = Where, with = Course, where = Date, why = Why, .protect = FALSE)
 ```
 
