--- a/docs/CV/Sposito_CV.Rmd
+++ b/docs/CV/Sposito_CV.Rmd
@@ -1,7 +1,7 @@
 ---
 name: Henrique
 surname: Sposito
-position: Researcher
+position: Computational Social Scientist
 about: ""
 email: henrique.sposito@graduateinstitute.ch
 github: henriquesposito
