--- a/CV/Sposito_CV.Rmd
+++ b/CV/Sposito_CV.Rmd
@@ -29,6 +29,8 @@ My research leverages advanced text analysis techniques, such as supervised mach
 
 \textbf{Interests:} Political Sociology, Environmental Studies, Statistical Methods, Text Analysis, Comparative Politics
 
+\thispagestyle{empty}
+
 # Education
 
 ```{r}
@@ -55,7 +57,7 @@ tribble(~ Title, ~ Published, ~ Journal, ~ When,
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)}",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics", "June 2023",
   "Radiating Truthiness: Authenticity performances in politics in Brazil and the United States", "Forthcoming", "Political Studies", "2024",
-  "Promises Promises: An introduction to urgency analyzis (with Jael Tan and James Hollway)",
+  "Promises Promises: An introduction to urgency analysis (with Jael Tan and James Hollway)",
   "Working Paper", "", "",
   "Managing imprecise dates in R with messydates (with James Hollway)",
   "Working Paper", "", "") %>% 
